feat: simplify player retrieval logic and enhance validation in OnlinePlayerUtil